[package]
name = "dll_injector"
version = "0.0.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[target.'cfg(target_os="windows")'.dependencies.winapi]
[dependencies.winapi]
version = "0.3"

features=[
    "winnt",#Various constants/types, used in injection/ejection
    "basetsd",#Types
    "errhandlingapi",#Get Errors
    "tlhelp32",#Find PID/Process Snapshot
    "minwindef",#Types
    "handleapi",#Close handles, which are returned, by other syscalls, buring injection/ejection
    "processthreadsapi",#used in injection/ejection.
    "libloaderapi",#used in injection/ejection.
    "memoryapi",#Allocate,Free and Write Process memory. Used in injection
    "winbase",#Infinity. Used with "synchapi"
    "synchapi",#Wait, until Dll is actually attached.
    "wow64apiset",#determine if proc is running under WOW
    "sysinfoapi",#determine if self is running under WOW
]

#wait for https://github.com/rust-lang/cargo/issues/1197

#[target.'cfg(not(target_os="windows"))'.dependencies.winapi]
#version = "0.3.9"
#
#features=[
#    "winnt",#Various constants, used in injection/ejection
#]

#[dependencies.x86_64]
#version="0.14"
#optional=true

[dependencies.ntapi]
version = "0.3"#Types
optional=true

#todo: use less libraries
[dependencies]
widestring = "0.4"#win apis like to return WIDE strings
pelite = "0.9" #to read dll information.

log = "0.4"
scopeguard = "1.1"#Run code, on var drop
lazy_static="1.4"
once_cell="1.8"

[build-dependencies]
cc = "1.0"

[features]
default=[]
nightly=[]
ntdll=["ntapi"]
x86tox64=["ntdll","nightly"]